# TomskBot

./: .gitignore  Dockerfile  README.md  command_handler.py  constants.py  docker-compose.yaml  logger.py  main.py  pyproject.toml  stack.env.example  yandex_gpt_bot.py
validator/: constants.py  heuristic_validator.py  validator.py  yandex_gpt_validator.py
